012-CronjobVaultBackupHelmMinikube/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-vault-access
  namespace: vault-test
spec:
  podSelector:
    matchLabels:
      app: vault
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: minio
      ports:
        - protocol: TCP
          port: 8200

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-minio-access
  namespace: minio
spec:
  podSelector:
    matchLabels:
      app: minio
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: vault
      ports:
        - protocol: TCP
          port: 9000
        - protocol: TCP
          port: 9001
